--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -1,17 +1,17 @@
 .btn-outline-success {
-    --bs-btn-color: #b9413a;
-    --bs-btn-border-color: #b9413a;
+    --bs-btn-color: #b9413e;
+    --bs-btn-border-color: #b9413e;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #b9413a;
-    --bs-btn-hover-border-color: #b9413a;
+    --bs-btn-hover-bg: #b9413e;
+    --bs-btn-hover-border-color: #b9413e;
     --bs-btn-focus-shadow-rgb: 25,135,84;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #b9413a;
-    --bs-btn-active-border-color: #b9413a;
+    --bs-btn-active-bg: #b9413e;
+    --bs-btn-active-border-color: #b9413e;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #b9413a;
+    --bs-btn-disabled-color: #b9413e;
     --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #b9413a;
+    --bs-btn-disabled-border-color: #b9413e;
     --bs-gradient: none;
 }
 .bg-body-tertiary {
@@ -20,11 +20,72 @@
 }
 
 .nav-link.disabled, .nav-link:disabled {
-    color: #b9413a;
+    color: #b9413e;
 }
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
     margin: 0 5%;
 }
 .navbar-brand{
     font-family: Inknut Antiqua;
+}
+#hero{
+    width: 100%;
+    height: 100vh;
+    background: url(img/image1.jpg) center no-repeat;
+    background-size: cover;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+#hero .container{
+   
+   position: relative;
+   padding: 0;
+   margin: 0;
+   width: 100%;
+}
+#hero h1{
+    font-family: Irish Grover, sans-serif;
+    margin: 0;
+    font-size: 100px;
+    line-height: 150px;
+    font-weight: 700;
+    background: linear-gradient(45deg, #0e0e0e 13%, #B9413E 87%, #8AA9D6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #0e0e0e;
+    text-align: center;
+}
+#hero h2{
+    margin: 10px 0 0 0;
+    font-family: irish grover;
+    font-size: 40px;
+    font-style: italic;
+    font-weight: 550;
+    line-height: 0;
+    color: #0E0E0E;
+}
+#hero .icon-box h3{
+    font-weight: 700;
+    margin-top: 10px;
+    padding: 0;
+    font-size: 30px;
+    line-height: 36px;
+}
+#hero .icon-box h3 a{
+    color: #fff;
+    text-decoration: none;
+}
+#hero .icon-box h3 a:hover{
+    color: #B9413E;
+}
+.icon-box{
+    padding: 30px 20px;
+    border: 2px solid rgba(255, 255, 255, 0.3);
+    height: 100%;
+    text-align: center;
+}
+.icon-box:hover{
+    border-color: #B9413E;
+    transition: 1.1;
 }
