--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -22,20 +22,27 @@
 .nav-link.disabled, .nav-link:disabled {
     color: #b9413e;
 }
+.navbar{
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+}
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
     margin: 0 5%;
 }
 .navbar-brand{
     font-family: Inknut Antiqua;
 }
+.form-control:focus{
+    box-shadow: 0 0 0 0.2rem #b9413e;
+}
 #hero{
     width: 100%;
     height: 100vh;
-    background: url(img/image1.jpg) center no-repeat;
+    background: linear-gradient(rgba(14, 14, 14, 0.3),rgba(14, 14, 14, 0.5) ), url(img/image1.jpg) fixed top center;
     background-size: cover;
     position: relative;
-    margin: 0;
-    padding: 0;
 }
 #hero .container{
    
@@ -43,6 +50,14 @@
    padding: 0;
    margin: 0;
    width: 100%;
+}
+#hero:before{
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
 }
 #hero h1{
     font-family: Irish Grover, sans-serif;
@@ -63,7 +78,7 @@
     font-style: italic;
     font-weight: 550;
     line-height: 0;
-    color: #0E0E0E;
+    color: #fff;
 }
 #hero .icon-box h3{
     font-weight: 700;
@@ -81,11 +96,129 @@
 }
 .icon-box{
     padding: 30px 20px;
-    border: 2px solid rgba(255, 255, 255, 0.3);
+    border: 3px solid rgba(255, 255, 255, 0.3);
     height: 100%;
     text-align: center;
 }
 .icon-box:hover{
     border-color: #B9413E;
     transition: 1.1;
+}
+.about li{
+    list-style-type: none;
+}
+.about h3{
+    font-family: Inknut Antiqua;
+    font-size: 30px;
+}
+.cta{
+    background: linear-gradient(rgba(14, 14, 14, 0.5),rgba(14, 14, 14, 0.8) ), url(img/image1.jpg) fixed center;
+    padding: 80px 0;
+    color: #fff;
+}
+.cta h3{
+    font-family: Inknut Antiqua;
+    font-size: 30px;
+    font-weight: 600;
+}
+.cta-btn{
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 8px 28px;
+    border: 2px solid #fff;
+    border-radius: 4px;
+    color: #fff;
+    margin-top: 10px;
+    font-family: Irish Grover;
+    text-decoration: none;
+}
+.cta-btn:hover{
+    background: #B9413E;
+    border-color: #B9413E;
+    color: #0E0E0E;
+}
+.cta p{
+    font-size: 17px;
+}
+.mem h5{
+    font-family: Inknut Antiqua;
+    font-size: 18px;
+    font-weight: 600;
+}
+.new{
+    font-family: Inknut Antiqua;
+    font-size: 50px;
+}
+#carouselExampleAutoplaying{
+    margin: 20px 0;
+    width: 50%;
+    padding: 2% 0;
+}
+.contentt{
+    background: linear-gradient(rgba(14, 14, 14, 0.5),rgba(14, 14, 14, 0.8) ), url(img/image1.jpg) fixed center;
+    
+}
+#group .image{
+    width: 150px;
+    margin-right: 20px;
+}
+#group img{
+    width: 100%;
+    
+}
+#group h3{
+    font-family: Inknut Antiqua;
+    font-size: 30px;
+}
+.accordion{
+    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(255, 0, 0, 0.25);
+    --bs-accordion-active-color: #b9413e;
+    --bs-accordion-active-bg: rgba(255, 0, 0, 0.25);
+}
+.services .imagen img{
+    width: 100%;
+}
+.services{
+    margin: 0;
+    padding: 30px 0;
+    background: linear-gradient(rgba(14, 14, 14, 0.5),rgba(14, 14, 14, 0.8) ), url(img/image1.jpg) fixed center;
+}
+.services h2{
+    font-family: Inknut Antiqua;
+    font-size: 50px;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.services .imagen-box{
+    border: 1px solid #B9413E;
+    background-color: #fff;
+    padding: 0;
+    transition: all ease-in-out 0.3s;
+    margin-bottom: 20px;
+}
+.services .imagen-box .imagen{
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    transition: 0.3s;
+    margin-bottom: 20px;
+}
+.services .imagen-box h4{
+    font-family: inknut antiqua;
+    margin-bottom: 15px;
+    font-size: 24px;
+}
+.services .imagen-box p{
+    line-height: 24px;
+    font-size: 15px;
+    margin: 0 10px 10px 10px;
+}
+.services .imagen-box:hover{
+    border-color: #fff;
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.5);
+    transform: translateY(-10px);
 }
