--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -222,3 +222,114 @@
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.5);
     transform: translateY(-10px);
 }
+.contact .info .info-icon{
+    background: #B9413E;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    float: left;
+}
+.contact .info h4{
+    padding: 0 0 0 60px;
+    font-family: inknut atiqua;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+.contact .info p{
+    font-size: 14px;
+    padding: 0 0 0 60px;
+}
+.contact{
+    margin: 0 5%;
+}
+.contact h2{
+    font-family: inknut atiqua;
+    font-size: 40px;
+    margin-bottom: 15px;
+}
+.contact .btn{
+    background: #B9413E;
+    width: 30%;
+}
+.btn-primary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #b9413e;
+    --bs-btn-border-color: #b9413e;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #b9413e;
+    --bs-btn-hover-border-color: #b9413e;
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #b9413e;
+    --bs-btn-active-border-color: #b9413e;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #b9413e;
+    --bs-btn-disabled-border-color: #b9413e;
+}
+.footer-top{
+    background: #0E0E0E;
+    color: #fff;
+    border-bottom: 1px solid #B9413E;
+    padding: 60px 0 30px 0;
+    margin-top: 30px;
+}
+.footer-top .footer-info{
+    margin-bottom: 30px;
+}
+.footer-top .footer-info h3{
+    font-family: inknut atiqua;
+    font-size: 35px;
+    margin: 0 0 20px 0;
+    padding: 2px 0;
+    line-height: 1;
+    font-weight: 500;
+}
+.footer-top .footer-info p{
+    font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+.footer-top .social-links a{
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin-right: 13px;
+}
+.footer-top h4{
+    font-family: irish grover;
+    font-size: 25px;
+}
+.footer-links{
+    margin-bottom: 30px;
+}
+.footer-links ul{
+   list-style: none;
+   padding: 0;
+   margin: 0;
+}
+.footer-links li{
+    padding: 0;
+    color: #B9413E;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+.footer-links li a{
+    text-decoration: none;
+    font-family: inknut atiqua;
+    color: #fff;
+    margin-left: 10px;
+}
+.footer-links li a:hover{
+    color: #B9413E;
+}
+.forma{
+    margin-top: 20px;
+    padding: 6px 10px;
+    border-radius: 4px;
+}
