adaptation + some new

--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -51,14 +51,6 @@
    margin: 0;
    width: 100%;
 }
-#hero:before{
-    background-color: rgba(0, 0, 0, 0.9);
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-}
 #hero h1{
     font-family: Irish Grover, sans-serif;
     margin: 0;
@@ -77,7 +69,6 @@
     font-size: 40px;
     font-style: italic;
     font-weight: 550;
-    line-height: 0;
     color: #fff;
 }
 #hero .icon-box h3{
@@ -142,6 +133,9 @@
 .cta p{
     font-size: 17px;
 }
+.mem{
+    margin: 0 2%;
+}
 .mem h5{
     font-family: Inknut Antiqua;
     font-size: 18px;
@@ -159,6 +153,19 @@
 .contentt{
     background: linear-gradient(rgba(14, 14, 14, 0.5),rgba(14, 14, 14, 0.8) ), url(img/image1.jpg) fixed center;
     
+}
+#group h1{
+    font-family: Irish Grover, sans-serif;
+    margin: 0;
+    font-size: 50px;
+    line-height: 100px;
+    font-weight: 700;
+    background: linear-gradient(45deg, #0e0e0e 13%, #B9413E 87%, #8AA9D6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #0e0e0e;
+    text-align: center;
+    padding: 0;
 }
 #group .image{
     width: 150px;
@@ -331,5 +338,107 @@
 .forma{
     margin-top: 20px;
     padding: 6px 10px;
-    border-radius: 4px;
+    border-radius: 4px; 
+}
+@media (max-device-width: 375px){
+    #hero h1{
+        font-size: 60px;
+        line-height: 70px;
+    }
+    #hero h2{
+        font-size: 25px;
+    }
+    .col-6{
+        width: 33%;
+        height: 33%;
+    }
+    #hero .icon-box h3 {
+        display: none;
+    }
+    .icon-box{
+        height: 135%;
+    }
+    .new{
+        font-size: 30px;
+    }
+   .icon-box svg{
+        width: 100%;
+    }
+}
+@media (max-device-width: 600px) and (min-device-width: 376px){
+    #hero h1{
+        font-size: 90px;
+        line-height: 130px;
+    }
+    #hero h2{
+        font-size: 30px;
+    }
+    .col-6{
+        width: 33%;
+        height: 33%;
+    }
+    #hero .icon-box h3 {
+        display: none;
+    }
+    .icon-box{
+        height: 135%;
+    }
+    .new{
+        font-size: 30px;
+    }
+    .icon-box svg{
+        width: 100%;
+    }
+}
+@media (max-device-width: 900px) and (min-device-width: 601px){
+    #hero h1{
+        font-size: 90px;
+        line-height: 130px;
+    }
+    #hero h2{
+        font-size: 30px;
+    }
+    .col-6{
+        width: 33%;
+        height: 33%;
+    }
+    #hero .icon-box h3 {
+        font-size: 20px;
+    }
+    .icon-box{
+        height: 135%;
+    }
+    .new{
+        font-size: 30px;
+    }
+    .icon-box svg{
+        width: 100%;
+    }
+}
+@media (max-device-width: 1200px) and (min-device-width: 901px){
+    #hero h1{
+        font-size: 90px;
+        line-height: 130px;
+    }
+    .col-6{
+        width: 33%;
+        height: 33%;
+    }
+    #hero .icon-box h3 {
+        font-size: 20px;
+    }
+    .icon-box{
+        height: 135%;
+    }
+    .new{
+        font-size: 30px;
+    }
+    .icon-box svg{
+        width: 100%;
+    }
+}
+@media (min-device-width: 1200px){
+   #hero .icon-box h3 {
+        font-size: 20px;
+    } 
 }
