--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -190,12 +190,11 @@
 .services{
     margin: 0;
     padding: 30px 0;
-    background: linear-gradient(rgba(14, 14, 14, 0.5),rgba(14, 14, 14, 0.8) ), url(img/image1.jpg) fixed center;
 }
 .services h2{
     font-family: Inknut Antiqua;
     font-size: 50px;
-    color: #fff;
+    color: #0e0e0e;
     margin-bottom: 20px;
 }
 .services .imagen-box{
@@ -340,6 +339,89 @@
     padding: 6px 10px;
     border-radius: 4px; 
 }
+.portfolio .portfolio-item {
+    margin-bottom: 30px;
+  }
+  .portfolio .section-title h2{
+    font-family: inknut antiqua;
+    font-size: 40px;
+    line-height: 45px;
+    font-weight: 900;
+    color: #B9413E;
+  }
+  .portfolio .section-title p{
+    font-family: inria serif;
+    font-size: 25px;
+   font-weight: 400;
+  }
+  .portfolio .portfolio-wrap {
+    transition: 0.3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    background: rgba(21, 21, 21, 0.6);
+  }
+  .portfolio .portfolio-wrap::before {
+    content: "";
+    background: rgba(21, 21, 21, 0.6);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    transition: all ease-in-out 0.3s;
+    z-index: 2;
+    opacity: 0;
+  }
+  
+  .portfolio .portfolio-wrap img {
+    transition: all ease-in-out 0.3s;
+  }
+  
+  .portfolio .portfolio-wrap .portfolio-info {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 3;
+    transition: all ease-in-out 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: 20px;
+  }
+  
+  .portfolio .portfolio-wrap .portfolio-info h4 {
+    font-size: 20px;
+    color: #fff;
+    font-weight: 600;
+  }
+  
+  .portfolio .portfolio-wrap .portfolio-info p {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 0;
+    margin: 0;
+    font-style: italic;
+  }
+  
+  .portfolio .portfolio-wrap:hover::before {
+    opacity: 1;
+  }
+  
+  .portfolio .portfolio-wrap:hover img {
+    transform: scale(1.2);
+  }
+  
+  .portfolio .portfolio-wrap:hover .portfolio-info {
+    opacity: 1;
+  }
+
+  
 @media (max-device-width: 375px){
     #hero h1{
         font-size: 60px;
