--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -420,8 +420,31 @@
   .portfolio .portfolio-wrap:hover .portfolio-info {
     opacity: 1;
   }
-
-  
+  #neew .card{
+    width: 45%;
+  }
+  #neew .card-img-overlay{
+    background: linear-gradient(rgba(14, 14, 14, 0.1),rgba(14, 14, 14, 0.8) ) ;
+  }
+  h1{
+    font-family: Irish Grover, sans-serif;
+    margin: 0;
+    font-size: 50px;
+    line-height: 100px;
+    font-weight: 500;
+    background: linear-gradient(45deg, #0e0e0e 13%, #B9413E 87%, #8AA9D6);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #0e0e0e;
+    text-align: center;
+    padding: 0;
+}
+#nee, #neww{
+    margin: 2% 4%;
+}
+#nee .card{
+    width: 100%;
+}
 @media (max-device-width: 375px){
     #hero h1{
         font-size: 60px;
