--- a/bootstrap/app.css
+++ b/bootstrap/app.css
@@ -469,6 +469,25 @@
    .icon-box svg{
         width: 100%;
     }
+    #neew{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #neew .card{
+        width: 90%;
+    }
+    #neew h5{
+        font-size: 20px;
+    }
+    #neew p{
+        font-size: 13px;
+        line-height: 15px;
+    }
+    #nee{
+        margin: 0;
+        width: 95%;
+    }
 }
 @media (max-device-width: 600px) and (min-device-width: 376px){
     #hero h1{
@@ -493,6 +512,25 @@
     }
     .icon-box svg{
         width: 100%;
+    }
+    #neew{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #neew .card{
+        width: 90%;
+    }
+    #neew h5{
+        font-size: 20px;
+    }
+    #neew p{
+        font-size: 15px;
+        line-height: 18px;
+    }
+    #nee{
+        margin: 0;
+        width: 95%;
     }
 }
 @media (max-device-width: 900px) and (min-device-width: 601px){
@@ -519,6 +557,18 @@
     .icon-box svg{
         width: 100%;
     }
+    #neew{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    #neew .card{
+        width: 90%;
+    }
+    #nee{
+        margin: 0;
+        width: 95%;
+    }
 }
 @media (max-device-width: 1200px) and (min-device-width: 901px){
     #hero h1{
@@ -541,6 +591,7 @@
     .icon-box svg{
         width: 100%;
     }
+   
 }
 @media (min-device-width: 1200px){
    #hero .icon-box h3 {
